--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,7 @@ dependencies {
     }
 
     // Because Eclipse is dumb and decided to use dynamic versions with J8 incompatibility
-    shade('org.eclipse.platform:org.eclipse.core.resources:3.14.0') { force = true }
+    /*shade('org.eclipse.platform:org.eclipse.core.resources:3.14.0') { force = true }
     shade('org.eclipse.platform:org.eclipse.core.runtime:3.20.100') { force = true }
     shade('org.eclipse.platform:org.eclipse.text:3.11.0') { force = true }
     shade('org.eclipse.platform:org.eclipse.core.filesystem:1.7.700') { force = true }
@@ -117,7 +117,7 @@ dependencies {
     shade('org.eclipse.platform:org.eclipse.core.jobs:3.10.1100') { force = true }
     shade('org.eclipse.platform:org.eclipse.equinox.registry:3.10.100') { force = true }
     shade('org.eclipse.platform:org.eclipse.osgi:3.16.200') { force = true }
-    shade('org.eclipse.platform:org.eclipse.core.commands:3.9.800') { force = true }
+    shade('org.eclipse.platform:org.eclipse.core.commands:3.9.800') { force = true }*/
 
     //Stuff used in the GradleStart classes
     compileOnly 'com.mojang:authlib:1.5.16'
